# proximity-service

./: .eslintrc  .gitignore  Cargo.toml  Makefile  Makefile.base  README.md  justfile  otel-config.yaml  otel_collector_config.template.yaml  otel_config.yaml  package-lock.json  package.json  sqlx-data.json
.config/: config.toml
.github/DISCUSSION_TEMPLATE/: rfc.yml
.github/ISSUE_TEMPLATE/: user-story---research.md
.github/workflows/: audit.yml  general.yml
config/: default.toml
migrations/: 20230326022832_create_owners_table.sql
src/: lib.rs  main.rs  settings.rs  telemetry.rs
src/api/: health_check.rs  mod.rs  owner.rs
src/routes/: health_check.rs
tests/: health_check.hurl  health_check.rs  owner.hurl  owner.rs
tests/utils/: mod.rs
