[package]
name = "proximity_service"
authors = ["Samuel Joli"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "proximity_service"

[dependencies]
axum = "0.6.11"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.158", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde"] }
dotenvy = { version = "0.15.7" }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.11", features = ["json"] }
