[package]
name = "proximity_service"
authors = ["Samuel Joli"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "proximity_service"

[dependencies]
# - web
axum                  = { version = "0.6.11" }
hyper                 = { version = "0.14.26", features = ["full"] }
tokio                 = { version = "1.0", features = ["full"] }
# - utils
serde                 = { version = "1.0.158", features = ["derive"] }
uuid                  = { version = "1.3.0", features = ["serde"] }
dotenvy               = { version = "0.15.7" }
env_logger            = { version = "0.9" }
tower                 = { version = "0.4", features = ["util"] }
tower-http            = { version = "0.4", features = ["trace"] }
config                = { version = "0.13.3" }
serde_derive          = { version = "1.0.160" }
# - observability
tracing               = { version = "0.1.37" }
tracing-subscriber    = { version = "0.3.16" }
opentelemetry         = { version = "0.19.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp    = { version = "0.12.0", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.18.0" }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
