[package]
name = "proximity_service"
authors = ["Samuel Joli"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "proximity_service"

[dependencies]
# - web
axum = { version = "0.6.11" }
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
# - utils
serde = { version = "1.0.158", features = ["derive"] }
serde_derive = { version = "1.0.160" }
uuid = { version = "1.3.0", features = ["serde"] }
dotenvy = { version = "0.15.7" }
env_logger = { version = "0.9" }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["trace", "request-id"] }
config = { version = "0.13.3" }
reqwest = { version = "0.11.13" }
# - observability
opentelemetry = { version = "0.19.0", features = [
    "rt-tokio-current-thread",
    "metrics",
] }
opentelemetry-otlp = { version = "0.12", features = [
    "metrics",
    "tonic",
    "tls",
    "tls-roots",
] }
tonic = { version = "0.8.3", features = ["tls"] }
tracing = { version = "0.1.37" }
tracing-opentelemetry = { version = "0.19.0" }
tracing-subscriber = { version = "0.3.16", features = ["std", "env-filter"] }
url = "2.2.0"
http = "0.2"
anyhow = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
sea-query = { version = "0", features = ["derive", "attr"] }
sea-query-binder = { version = "0", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
    "with-ipnetwork",
    "with-mac_address",
    "runtime-tokio-rustls",
] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
wait-for-them = "0.4.0"
